22-Sep-2015 Laurent Duflot
	* INSTALL : update to SUSY,2.3.28, reference release for Oct FAR
	* tag as ZeroLeptonRun2-00-00-50

22-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: change overlap removal
	* INSTALL, BuildSUSYObjects: update to SUSYTools-00-06-24-01 (SUSY,2.3.26)
	* revision 696196

22-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: add tau truth matching
	* INSTALL, BuildSUSYObjects: update to SUSYTools-00-06-23-03 (SUSY,2.3.24a)
	* revision 696188

22-Sep-2015 Laurent Duflot
	* INSTALL, BuildSUSYObjects, config files: update to SUSYTools-00-06-22 (SUSY,2.3.23)
	* revision 696100

21-Sep-2015 Laurent Duflot
	* zerolepton.config: change JES NP set to 1 (to actually use a very reduced set)
	* revision: 695952

18-Sep-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx, launch_jobs_on_grid.py: add p2419
	* data/mc15_13TeV_signal_25ns_xAOD.ds : 25ns xAOD signal samples
	* makeDatasetList.py: update for signal samples, including AtlFastII

17-Sep-2015 Laurent Duflot
	* FilterUpdateMerge.py: wrong file was copied over on last update!
	allow to use pickle file as file input list
	* makeDatasetList.py: add r6895 to 25ns tags (not on wiki...)
	* mc15_13TeV_MCSampleList.py: fix code typo
	* data: remove mc14 samples, add mc15_13TeV_25ns_SM_xAOD.ds

13-Sep-2015 Geraldine Conti
	* Updated the boson tagging numbers to latest recommendation

11-Sep-2015 Laurent Duflot
	* makeDatasetList.py: update rtags for 50ns and 25ns MC

09-Sep-2015 Geraldine Conti
	* Added variable for lepton pT coming from W in CR3L

03-Sep-2015 Laurent Duflot
	* tag as -49

26-Aug-2015 Geraldine
	* Added lepton isolation variables in CRWT

26-Aug-2015 Geraldine Conti
	* Added reclustering and boson tagging variables in the ReclTree
	* ZeroLeptonCR3L.cxx, ZeroLeptonCRY.cxx, ZeroLeptonCRZ.cxx,
	ZeroLeptonCRWT.cxx, ZeroLeptonSR.cxx : changed FillNTReclusteringVars
	function and added boson tagging calculations in CRWT, CRZ and SR